--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ The following is a tentative schedule. We will post lecture notes and assignment
     
     <li>  <b> 2 homeworks </b> worth 15% of the grade. Discussion is allowed and encouraged but everyone should write solutions on their own. Homeworks should be written in Latex and submitted via Gradescope.
 
-    <li> <b> Mini-homeworks </b> worth 15% of the grade. You should read presented papers before class so that you can contribute and get the most out of the presentation and discussion. Part of the course grade is also based on this via mini-homeworks. For every lecture day, you can fill out this form: before 11 am on that day. More instructions are given on the form. Each mini-homework will be graded on a scale from 0 to 1.5, and we will add your top 10 mini-homework scores for your final grade.
+    <li> <b> Mini-homeworks </b> worth 15% of the grade. You should read presented papers before class so that you can contribute and get the most out of the presentation and discussion. Part of the course grade is also based on this via mini-homeworks. For every lecture day, you can fill out this form: before 10 am on that day. More instructions are given on the form. We will drop your lowest mini-homework score for the final grade.
 
     <li> Each student will be required to <b> present a paper </b> in class, which will be worth 15% of the grade.
         
