--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Paper presentations: <br>
   <td align="center">3, 09/10</td>
   <td align="left"> Distributional robustness <br>
 Paper presentations: <br>
-(1) <a href="https://arxiv.org/pdf/2412.16339.pdf">Deliberative Alignment: Reasoning Enables Safer Language Models </a>(try to brielfy cover <a href="https://arxiv.org/pdf/2502.01633.pdf">Adversarial Reasoning at Jailbreaking Time</a>) <br>
+(1) <a href="https://arxiv.org/pdf/2412.16339.pdf">Deliberative Alignment: Reasoning Enables Safer Language Models </a>(try to briefly cover <a href="https://arxiv.org/pdf/2502.01633.pdf">Adversarial Reasoning at Jailbreaking Time</a>) <br>
 (2) <a href="https://dl.acm.org/doi/pdf/10.1145/3717823.3718245">Oblivious Defense in ML Models: Backdoor Removal without Detection</a> <br>
 (3) <a href="https://proceedings.mlr.press/v97/recht19a/recht19a.pdf">Do ImageNet Classifiers Generalize to ImageNet?</a><br>
 (4) <a href="https://arxiv.org/abs/2107.04649">Accuracy on the Line: On the Strong Correlation Between Out-of-Distribution and In-Distribution Generalization </a> (try to briefly cover <a href="https://arxiv.org/abs/2406.19049">Accuracy on the wrong line: On the pitfalls of noisy data for out-of-distribution generalisation</a>)
