--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ Paper presentations: <br>
   <td align="center">3, 09/10</td>
   <td align="left"> Distributional robustness <br>
 Paper presentations: <br>
-(1) <a href="https://arxiv.org/pdf/2412.16339.pdf">Deliberative Alignment: Reasoning Enables Safer Language Models </a>(try to briefly cover <a href="https://arxiv.org/pdf/2502.01633.pdf">Adversarial Reasoning at Jailbreaking Time</a>) <br>
+(1) <a href="https://arxiv.org/pdf/2412.16339.pdf">Deliberative Alignment: Reasoning Enables Safer Language Models </a>(briefly cover <a href="https://arxiv.org/pdf/2502.01633.pdf">Adversarial Reasoning at Jailbreaking Time</a>) <br>
 (2) <a href="https://arxiv.org/abs/2310.03684">SmoothLLM: Defending Large Language Models Against Jailbreaking Attacks</a> <br>
 (3) <a href="https://proceedings.mlr.press/v97/recht19a/recht19a.pdf">Do ImageNet Classifiers Generalize to ImageNet?</a><br>
-(4) <a href="https://arxiv.org/abs/2107.04649">Accuracy on the Line: On the Strong Correlation Between Out-of-Distribution and In-Distribution Generalization </a> (try to briefly cover <a href="https://arxiv.org/abs/2406.19049">Accuracy on the wrong line: On the pitfalls of noisy data for out-of-distribution generalisation</a>)
+(4) <a href="https://arxiv.org/abs/2107.04649">Accuracy on the Line: On the Strong Correlation Between Out-of-Distribution and In-Distribution Generalization </a> (briefly cover <a href="https://arxiv.org/abs/2406.19049">Accuracy on the wrong line: On the pitfalls of noisy data for out-of-distribution generalisation</a>)
   </td>
   <td align="center">
       
