--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li> <b>TAs: </b> TBD
             <li> <b>CP & Grader: </b>
                 TBD
+                <li> <b>Office Hour: </b> Vatsal: Wednesdays  2pm-3pm (from 9/3 to 10/1) in the common space next to the elevators on the 4th floor of the GCS computer science building  
                     <li> <b> Communication: </b> We will primarily use Slack for communication. 
                 <li> <b> Gradescope: </b> We will use <a href="https://gradescope.com/">Gradescope </a> for assignment and final project submission.
     </ul>
