--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <ul>
     <li> <b> Lecture time: </b> Wednesday 4:00 pm to 7:20 pm
-    <li> <b> Lecture place: </b> THH B9
+    <li> <b> Lecture place: </b> WPH 207
             <li> <b>TAs: </b> TBD
             <li> <b>CP & Grader: </b>
                 TBD
