--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ The following is a tentative schedule. We will post lecture notes and assignment
   <td align="center">2, 09/03</td>
   <td align="left"> Certified robustness, randomized smoothing, data poisoning <br>
 Paper presentations: <br>
-(1) <a href="https://arxiv.org/pdf/1911.05911.pdf">Recent Advances in Algorithmic High-Dimensional Robust Statistics</a> (also see <a href="http://people.csail.mit.edu/moitra/docs/cacmrobust.pdf">Robustness Meets Algorithms </a>) <br>
+(1) <a href="https://arxiv.org/pdf/1911.05911.pdf">Recent Advances in Algorithmic High-Dimensional Robust Statistics</a> (also see <a href="http://people.csail.mit.edu/moitra/docs/cacmrobust.pdf">Robustness Meets Algorithms</a>) <br>
 (2) <a href="https://arxiv.org/pdf/2310.08419">Jailbreaking Black Box Large Language Models in Twenty Queries </a>
 
   </td>
@@ -144,7 +144,7 @@ Paper presentations: <br>
   Paper presentations: <br>
   (1) <a href="https://arxiv.org/abs/1803.04383">Delayed Impact of Fair Machine Learning</a> <br>
   (2) <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination through Causal Reasoning</a> <br>
-  (3) <a href="https://arxiv.org/abs/2311.14648">Calibrated Language Models Must Hallucinate</a>
+  (3) <a href="https://www.arxiv.org/pdf/2509.04664">Why Language Models Hallucinate</a> (also see <a href="https://arxiv.org/abs/2311.14648">Calibrated Language Models Must Hallucinate</a>)
   </td>
   <td align="center">
   </td>
