--- a/reaction_paper.html
+++ b/reaction_paper.html
@@ -44,7 +44,7 @@ Your writeup should be about 3 to 5 pages with normal fonts and margins and sing
 
 <ul>
 <li> About one page should be used to summarize the main content and results of the papers you are discussing. How do they fit in the field, and what you have learned in class so far? What is the connection between the papers you are discussing?
-<li> About one page should be a judgment of what is in the paper. What struck you as particularly interesting? What were the authors missing? Was anything particularly unrealistic? This section should go into a bit of depth, for e.g. typically more than for mini-HWs.
+<li> About one page should be a judgment of what is in the paper. What struck you as particularly interesting? What were the authors missing? Was anything particularly unrealistic? This section should go into a bit of depth, for e.g. typically more than in mini-HWs.
 <li> About one page should be a discussion of what you feel may be an interesting step to take beyond what the papers are doing. Perhaps you have an idea of a better model for something? A better algorithm? A better evaluation? Perhaps the papers suggest techniques that you would like to apply elsewhere? Obviously, your ideas here will not be completely worked out. They should be brainstorming ideas. If you have the time to look up some more relevant literature, or can cite it off the top of your head, all the better. Just as a measure of calibration, this should be the result of thinking about possible extensions for a couple of hours or so. Not a 5-minute output, nor a careful research project (yet).
 
 <li> Obviously, these parts need not be separated into sections. You can combine them in any way that makes for a good narrative.<br><br>
