--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ Paper presentations: <br>
 
 <ol>
     
-    <li>  <b> 2 homeworks </b> worth 15% of the grade. Discussion is allowed and encouraged but everyone should write solutions on their own. Homeworks should be written in Latex and submitted via Gradescope.
+    <li>  <b> 2 homeworks </b> worth 15% of the grade. Homeworks should be written in Latex and submitted via Gradescope.
 
     <li> <b> Mini-homeworks </b> worth 15% of the grade. You should read presented papers before class so that you can contribute and get the most out of the presentation and discussion. Part of the course grade is also based on this via mini-homeworks. For every lecture day, you can fill out <a href=https://forms.gle/eMoRqycqsyUM9cDi7>this form</a> before 10 am on that day. More instructions are given on the form. We will drop your lowest mini-homework score for the final grade.
 
