--- a/proposal.html
+++ b/proposal.html
@@ -30,17 +30,17 @@
 <p>
 
 <h3 style="color:#1F618D;">Project proposal </h3>
-<h4 style="color:#1F618D;">Due date: October 17, 5pm (no late submissions allowed)</h4>
+<h4 style="color:#1F618D;">Due date: October 7, 5pm (no late submissions allowed)</h4>
 <br>
 
 
-The goal of the project is to give you experience in research on topics in trustworthy ML. You are free to pursue a purely theoretical project, a purely empirical project, or some combination of these. You can discuss project ideas with the instructors. The project will be in groups of two students. <br><br>
+The goal of the project is to give you experience in research on topics in trustworthy ML. The project is intended to be a research project, and not just a survey of existing work. You are free to pursue a purely theoretical project, a purely empirical project, or some combination of these. For example, you could study a new application domain and investigate aspects of trustworthiness there, develop new algorithms, systematically evaluate and compare existing algorithms, show new theoretical guarantees, or propose new notions of trustworthiness. You can discuss project ideas with the instructors. The project will be in groups of two students. <br><br>
 
-The project proposal is worth 5% of the grade for the class. It should be about 1 page long with normal fonts and margins. It should cover the following:
+The project proposal is worth 5% of the grade for the class. It should be about 1 page long with normal fonts and margins. It should cover the following:<br><br>
 
 <ul>
 <li> Title of your project, group members.
-<li> A short abstract
+<li> A short abstract. 
 <li> A few paragraphs describing the motivation of the project, intended objectives and scope, and what makes the project interesting to you.
 <li> A tentative timeline for the project, including milestones to achieve by the project presentation on 11/19, and the final report submission on TBD. Note that we do not expect your project to be complete by the presentation on 11/19, but you should have made some reasonable progress.
 </ul>
