--- a/proposal.html
+++ b/proposal.html
@@ -42,7 +42,7 @@ The project proposal is worth 5% of the grade for the class. It should be about 
 <li> Title of your project, group members.
 <li> A short abstract. 
 <li> A few paragraphs describing the motivation of the project, intended objectives and scope, and what makes the project interesting to you.
-<li> A tentative timeline for the project, including milestones to achieve by the project presentation on 11/19, and the final report submission on TBD. Note that we do not expect your project to be complete by the presentation on 11/19, but you should have made some reasonable progress.
+<li> A tentative timeline for the project, including milestones to achieve by the project presentation on 11/19, and the final report submission which will be due in the final exam period (between December 10 to 17, exact date to be announced later). Note that we do not expect your project to be complete by the presentation on 11/19, but you should have made some reasonable progress.
 </ul>
 <br> 
 
