--- a/proposal.html
+++ b/proposal.html
@@ -46,7 +46,7 @@ The project proposal is worth 5% of the grade for the class. It should be about 
 </ul>
 <br> 
 
-The paper will be due on Gradescope, which will be setup soon. Each team should make a single submission (make sure to mark your team member in the Gradescope submission). Please note that no late submissions are allowed, so plan accordingly.<br><br>
+The paper will be due on Gradescope. Each team should make a single submission (make sure to mark your team member in the Gradescope submission). Please note that no late submissions are allowed, so plan accordingly.<br><br>
 
 
 </p>
