--- a/reaction_paper.html
+++ b/reaction_paper.html
@@ -50,7 +50,7 @@ Your writeup should be about 3 to 5 pages with normal fonts and margins and sing
 <li> Obviously, these parts need not be separated into sections. You can combine them in any way that makes for a good narrative.<br><br>
 </ul>
 
-The paper will be due on Gradescope, which will be setup soon. Please note that no late submissions are allowed, so plan accordingly.<br><br>
+The paper will be due on Gradescope. Please note that no late submissions are allowed, so plan accordingly.<br><br>
 
 <em>(Thanks to David Kempe for letting us borrow his idea of a reaction paper.)</em>
 
