--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Paper presentations: <br>
 
 <tr>
   <td align="center">5, 09/24</td>
-  <td align="left"> Fairness notions in classification, individual fairness, group fairness, inherent tradeoffs between notions<br>
+  <td align="left"> Fairness notions in classification, individual fairness, group fairness, case study of fairness notions<br>
   Paper presentations: <br>
   (1) <a href="https://arxiv.org/pdf/2002.06673">Performative Prediction</a> <br>
   (2) <a href="https://arxiv.org/pdf/2501.19334">The Value of Prediction in Identifying the Worst-Off</a>
@@ -142,14 +142,14 @@ Paper presentations: <br>
 
 <tr>
   <td align="center">6, 10/01</td>
-  <td align="left"> Calibration, multicalibration, conformal prediction<br>
+  <td align="left"> Inherent tradeoffs between notions, individual fairness via uncertainty quantification, multicalibration<br>
   Paper presentations: <br>
   (1) <a href="https://arxiv.org/abs/1803.04383">Delayed Impact of Fair Machine Learning</a> <br>
   (2) <a href="https://arxiv.org/abs/1706.02744">Avoiding Discrimination through Causal Reasoning</a> <br>
   (3) <a href="https://www.arxiv.org/pdf/2509.04664">Why Language Models Hallucinate</a> (also see <a href="https://arxiv.org/abs/2311.14648">Calibrated Language Models Must Hallucinate</a>)
   </td>
   <td align="center">
-      
+      <a href="https://vatsalsharan.github.io/fall2025/lec6_annotated.pdf">Lecture slides</a>
   </td>
   <td align="center">
       
